--- a/The Soccer Challager/index.html
+++ b/The Soccer Challager/index.html
@@ -6,13 +6,62 @@
 <head>
     <meta charset="UTF-8"/>
     <link href="assets/fav.ico" rel="icon">
-    <title>Tiny Graphics</title>
+    <title>Soccer Challenger</title>
 </head>
-<body style="background: rgb(255, 255, 255)">
+<body style="background: rgb(86, 169, 105)">
 <!-- Begin typing your web page here. -->
 <!-- The following code embeds a WebGL canvas panel, loads certain scene(s), and displays panel(s) of their controls.-->
 <div class="canvas-widget" id="main-canvas"></div>
+
 <script type=module>
+window.addEventListener('load', function() {
+    const canvas = document.querySelector('.canvas-widget canvas');
+    const AspectRatio = 1.8
+
+    let width = window.innerWidth;
+        let height = window.innerHeight;
+
+        if (width / height > AspectRatio) {
+            width = height * AspectRatio;
+        } else {
+            height = width / AspectRatio;
+        }
+
+    if (canvas) {
+        canvas.width = 1080;  
+        canvas.height = 600;  
+    }
+
+    canvas.style.width = width + "px";
+    canvas.style.height =  height + "px";
+    canvas.style.margin =  0;
+    canvas.margin =  "0px";
+
+});
+window.addEventListener('resize', function() {
+    const canvas = document.querySelector('.canvas-widget canvas');
+    const AspectRatio = 1.8
+
+    let width = window.innerWidth;
+        let height = window.innerHeight;
+        if (width / height > AspectRatio) {
+            width = height * AspectRatio;
+        } else {
+            height = width / AspectRatio;
+        }
+
+    if (canvas) {
+        canvas.width = 1080; 
+        canvas.height = 600; 
+        
+    }
+    canvas.style.width = width + "px";
+    canvas.style.height =  height + "px";
+    canvas.style.margin = 0 ;
+    canvas.margin =  "0px";
+
+});
+
 
     // ********************* THE ENTRY POINT OF YOUR WHOLE PROGRAM STARTS HERE *********************
     // Indicate which element on the page you want the Canvas_Widget to replace with a 3D WebGL area:
