--- a/The Soccer Challager/index.html
+++ b/The Soccer Challager/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <link href="assets/fav.ico" rel="icon">
+<!-- 
+    <link rel="stylesheet" href="styles.css">
+    <script src="SoccerChallenge.js"></script>
+    <script src="scripts.js"></script> -->
     <title>Soccer Chanllenger</title>
     <style>
       
@@ -113,7 +117,7 @@
         color: white;
         font-size: 40px;
         -webkit-text-stroke: 1px black;
-        text-stroke: 1px black;
+        /* text-stroke: 1px black; */
         }
 
        
