--- a/The Soccer Challager/index.html
+++ b/The Soccer Challager/index.html
@@ -105,15 +105,29 @@
         }
        
 
+
         #countdown {
         position: fixed;
         top: 20px;
-        left: 50%; /* Move to the horizontal center */
-        transform: translateX(-50%); /* Adjust for centering */
-        color: white;
-        font-size: 40px;
-        -webkit-text-stroke: 1px black;
-        text-stroke: 1px black;
+        left: 50%;
+        transform: translateX(-50%);
+        font-family: 'Comic Sans MS', cursive, sans-serif; /* 卡通风格的字体 */
+        font-size: 2em; /* 较大的字体尺寸 */
+        color: #00BFFF; /* 天蓝色 */
+        text-shadow: 2px 2px 4px #000000;/* 黑色阴影，增加对比度 */
+        padding: 10px;
+        border-radius: 10px;
+        background: rgba(255, 255, 255, 0.5); /* 半透明背景，增加可读性 */
+        animation: pulse 1s infinite alternate; /* 动画效果 */
+        }
+        /* 缩放动画 */
+            @keyframes pulse {
+        from {
+        transform: scale(1);
+        }
+        to {
+        transform: scale(1.1);
+        }
         }
 
        
