fix fucking html

--- a/The Soccer Challager/index.html
+++ b/The Soccer Challager/index.html
@@ -41,7 +41,7 @@
         transition: all 0.5s;
         cursor: pointer;
         margin: 5px;
-        margin-left: 75px; 
+        margin-left: 20px; 
     }
 
 
@@ -168,8 +168,8 @@
     <!-- Game result display section -->
     <div id="gameResult" style="display: none;">
         <!--<h1>Congradulation!</h1> -->
-        <p id="resultMessage"><p>
-            <button id="restartBtn" class="button1" style="padding-left: -10px" onclick="restartGame()">
+        <p id="resultMessage" style="font-size: 3.5rem;"><p>
+            <button id="restartBtn" class="button1"  onclick="restartGame()">
                 <span>Restart &#8594;</span>
             </button>
             <button id="exitBtn" class="button1" onclick="exitPage()">
